--- a/auth-email/scaffold/.env.local
+++ b/auth-email/scaffold/.env.local
@@ -8,3 +8,6 @@ FAUNA_SERVER_KEY=""
 # You can keep it, or you can replace it with your own.
 # Note that existing users will be signed out whenever you change the secret.
 HAPPYAUTH_TOKEN_SECRET=""
+# The base url used when sending links via email, e.g.
+# "https://example.com" (do not include a path or trailing slash)
+PRODUCTION_BASE_URL=""
