--- a/auth-email/package.json
+++ b/auth-email/package.json
@@ -36,6 +36,7 @@
     "@types/lodash.mapvalues": "4.6.6",
     "@types/ms": "0.7.31",
     "@types/query-string": "6.3.0",
+    "@types/sendmail": "1.4.2",
     "@types/simple-oauth2": "2.5.3",
     "@xstate/fsm": "1.4.0",
     "@xstate/react": "0.8.1",
@@ -54,6 +55,7 @@
     "open": "7.0.4",
     "path": "0.12.7",
     "query-string": "6.12.1",
+    "sendmail": "1.6.1",
     "simple-oauth2": "3.4.0",
     "xstate": "4.10.0"
   },
