--- a/demo/package.json
+++ b/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-fauna-typescript",
+  "name": "demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@happykit/auth-email": "1.0.0-alpha.0",
+    "@types/mailgun-js": "0.22.7",
     "@types/node": "14.0.6",
     "@types/react": "16.9.35",
     "faunadb": "2.14.1",
+    "mailgun-js": "0.22.0",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
