--- a/starter-fauna/package.json
+++ b/starter-fauna/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@happykit/auth-email": "1.0.0-alpha.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
