--- a/auth-email/package.json
+++ b/auth-email/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "test": "jest",
     "dev": "webpack --config webpack.config.js --watch",
+    "prebuild": "cp ../README.md .",
     "build": "NODE_ENV=production webpack --config webpack.config.js",
     "pub": "yarn publish --access=public"
   },
