--- a/demo/package.json
+++ b/demo/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@happykit/auth-email": "4",
+    "@happykit/auth-email": "1.0.0-alpha.4",
     "@types/mailgun-js": "0.22.7",
     "@types/node": "14.0.14",
     "@types/react": "16.9.41",
